# rp2040-freertos-eez-lvgl

./: .gitmodules  CMakeLists.txt
ProjectFiles/: main.c
ProjectFiles/ui/: flow_def.c  flow_def.h  screens.c  screens.h
